# CIPOC

./: .gitignore  README.md  llm_client.py  naaccr_extraction.py  note_filter.py  note_preprocessing.py  pyproject.toml  utils.py
config/: config.yaml
documents/: naaccr_data_dictionary_v25.json
documents/markdown/: SPCSM_2024_MainDoc.md  SolidTumorRules_Combined.md  fords-2016.md  seer_summary_staging_manual.md  site_histology_validation_list.md  store-manual-2024.md
documents/rules/: manifest.json
documents/rules/solid_tumor_rules/: breast.json  breast.review.txt
documents/rules/spcsm_2024/: date_chemotherapy_started.json  date_chemotherapy_started.review.txt  date_chemotherapy_started.usage.json  date_hormone_therapy_started.json  date_hormone_therapy_started.review.txt  date_hormone_therapy_started.usage.json  date_immunotherapy_started.json  date_immunotherapy_started.review.txt  date_immunotherapy_started.usage.json  date_of_first_surgical_procedure.json  date_of_first_surgical_procedure.review.txt  date_of_first_surgical_procedure.usage.json  date_of_regional_lymph_node_dissection.json  date_of_regional_lymph_node_dissection.review.txt  date_of_regional_lymph_node_dissection.usage.json  date_of_sentinel_lymph_node_biopsy.json  date_of_sentinel_lymph_node_biopsy.review.txt  date_radiation_started.json  (+39 more)
scripts/: __init__.py
scripts/rule_compilation/: __init__.py  compile_manual.py  report.py  segment.py  tag.py  validate.py
src/cipoc/: __init__.py
tests/fixtures/: note_bundle.json  note_bundle.txt  synthetic_note.json  synthetic_notes_timeseries.json
(+29 files in other folders)
